exports[`component::DateFilter snapshot shows errors 1`] = `
<section
  className="o-expandable aggregation date-filter">
  <div
    className="o-expandable_header o-expandable_target">
    <h5
      className="o-expandable_header-left o-expandable_label">
      Date CFPB Received the complaint
    </h5>
    <span
      className="o-expandable_header-right o-expandable_link">
      <button
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}>
        Hide
        <span
          className="cf-icon cf-icon-minus-round" />
      </button>
    </span>
  </div>
  <p />
  <div
    className="layout-row">
    <div
      className="flex-all">
      <label
        className="a-label a-label__heading body-copy">
        From
      </label>
      <input
        aria-describedby="input-error_message-from"
        className="a-text-input__error"
        max="2015-12-31"
        min="2015-01-01"
        onChange={[Function]}
        type="date"
        value="2016-01-01" />
    </div>
    <div
      className="flex-all">
      <label
        className="a-label a-label__heading body-copy">
        Through
      </label>
      <input
        aria-describedby="input-error_message-through"
        className="a-text-input__error"
        max="2015-12-31"
        min="2015-01-01"
        onChange={[Function]}
        type="date"
        value="2000-01-01" />
    </div>
    <ul
      className="messages">
      <li
        className="a-error-message"
        id="input-error_message-from"
        role="alert">
        <span
          aria-hidden="true"
          className="cf-icon cf-icon-delete-round" />
        '2016-01-01' must be less than 2015-12-31
      </li>
      <li
        className="a-error-message"
        id="input-error_message-through"
        role="alert">
        <span
          aria-hidden="true"
          className="cf-icon cf-icon-delete-round" />
        '2000-01-01' must be greater than 2015-01-01
      </li>
      <li
        className="a-error-message"
        id="input-error_message-ordered"
        role="alert">
        <span
          aria-hidden="true"
          className="cf-icon cf-icon-delete-round" />
        'From' must be less than 'Through'
      </li>
    </ul>
  </div>
</section>
`;

exports[`component::DateFilter snapshot supports no dates in the Redux Store 1`] = `
<section
  className="o-expandable aggregation date-filter">
  <div
    className="o-expandable_header o-expandable_target">
    <h5
      className="o-expandable_header-left o-expandable_label">
      Date CFPB Received the complaint
    </h5>
    <span
      className="o-expandable_header-right o-expandable_link">
      <button
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}>
        Hide
        <span
          className="cf-icon cf-icon-minus-round" />
      </button>
    </span>
  </div>
  <p />
  <div
    className="layout-row">
    <div
      className="flex-all">
      <label
        className="a-label a-label__heading body-copy">
        From
      </label>
      <div>
        <input
          aria-describedby="input-error_message-from"
          className="a-text-input"
          max={2015-12-31T00:00:00.000Z}
          min={2015-01-01T00:00:00.000Z}
          onChange={[Function]}
          placeholder="mm/dd/yyyy"
          size="15"
          value="" />
      </div>
    </div>
    <div
      className="flex-all">
      <label
        className="a-label a-label__heading body-copy">
        Through
      </label>
      <div>
        <input
          aria-describedby="input-error_message-through"
          className="a-text-input"
          max={2015-12-31T00:00:00.000Z}
          min={2015-01-01T00:00:00.000Z}
          onChange={[Function]}
          placeholder="mm/dd/yyyy"
          size="15"
          value="" />
      </div>
    </div>
  </div>
</section>
`;
